--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@iconify-icons/mdi": "^1.2.48",
     "@iconify/react": "^6.0.2",
+    "@studio-freight/lenis": "^1.0.42",
+    "framer-motion": "^12.23.24",
+    "lenis": "^1.3.11",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
